--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .idea/workspace.xml
+/public/css/admin.css
+/public/css/app.css
+/public/js/admin.js
+/public/js/app.js
+
