--- a/.env.example
+++ b/.env.example
@@ -45,5 +45,9 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
 
+FACEBOOK_URL=https://www.facebook.com/
+TWITTER_URL=https://www.twitter.com/
+LINKEDIN_URL=https://www.linkedin.com/
+
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
